--- a/Services.html
+++ b/Services.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Services</title>
+        <link rel="stylesheet" href="css/styles.css">
+
+        </head>
         <body>
             <h2><strong>Services</strong></h2>
             <ol>
@@ -10,6 +13,6 @@
                 <li>web design</li>
             </ol> 
         </body>
-    </head>
-    <hr>
+    
+    <hr size="6 noshade">
 </html>
