--- a/Contacts.html
+++ b/Contacts.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="css/styles.css">
+
+      </head>
         <body>
-          <h2><strong>Contacts</strong></h2>
+          <h2><i><strong>Contacts</strong></i></h2>
           <ol>
             <li>email: amondidolphine6@gmail.com</li>
             <li>Telephone number: +254111386855</li>
@@ -25,6 +28,6 @@
           <input type="submit">
         </form> 
         </body>
-    </head>
-    <hr>
+  
+    <hr size="6 noshade">
 </html>
