--- a/Education.html
+++ b/Education.html
@@ -3,6 +3,8 @@
  <head>
     <meta charset="utf-8">
     <title>Education</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
     <body>
         <h2><strong>Education</strong></h2>
         <table border="1px">
@@ -44,6 +46,6 @@
             </ul>
         </table> 
     </body>
- </head>
-<hr>
+ 
+<hr size="6 noshade">
 </html>
