--- a/Skills.html
+++ b/Skills.html
@@ -3,16 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>Skills</title>
-        <table cellspacing="10px">
-            <tr>
-                <td>HTML</td>
-                <td>✴✴✴✴✳</td>
-            </tr>
-            <tr>
-                <td>CSS</td>
-                <td>✴✴✳✳✳</td>
-            </tr>
-        </table>
-    </head>
+        <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <table cellspacing="10px">
+        <tr>
+            <td>HTML</td>
+            <td>✴✴✴✴✳</td>
+        </tr>
+        <tr>
+            <td>CSS</td>
+            <td>✴✴✳✳✳</td>
+        </tr>
+    </table>
+<hr size="6 noshade">
+</body>
+        
 </html>
-<hr>
