--- a/index.html
+++ b/index.html
@@ -1,27 +1,97 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Dolphine's personal site</title>
-        <body>
-         <table cellspacing="10">
-            <tr>
-            <td><img src="dee.jpg" alt="Dolphine profile picture"></td>
-             <td> <h1><strong>DOLPHINE AMONDI</strong></h1>
-                <p><i><strong>A web developer, based in Nairobi Kenya</strong></i></p>
-                <P>I am currently a student at Mount Kenya University.</P>
-                I am currently on attachment at 0aknet Business in upperhill and my goal at the end of this course is to become a full stack web developer.
-                <p>I love coding and practise it when I'm free.</p></td>
-            </tr>
-             </table>
-            <hr size="1 noshade">
-           <a href="Education.html">Education</a>
-           <br>
-            <a href="Services.html">Services</a>
-            <br>
-            <a href="Contacts.html">Contacts</a>
-            <br>
-            <a href="Skills.html">Skills</a>
-        </body>
-    </head>
-    <hr>
+
+<head>
+    <title>Dolphine's personal site</title>
+
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+</head>
+
+<body id="body" class="container">
+    <div class="row">
+        <div class="col">
+
+            <h1 class="p-2 m-2"><strong><i class="head">DOLPHINE <br>  AMONDI</i></strong></h1>
+
+            <nav class="navbar navbar-expand-lg navbar-light m-2 float-end">
+                <div class="container-fluid">
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                            <li class="nav-item">
+                                <a class="nav-link active btn btn-rounded-pill btn-primary m-1" aria-current="page"
+                                    href="index.html">Home</a>
+
+                            <li class="nav-item">
+                                <a class="nav-link active btn btn-rounded-pill btn-primary m-1 " aria-current="page"
+                                    href="Education.html">Education</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active btn btn-rounded-pill btn-primary m-1" aria-current="page"
+                                    href="My_story.html">My Story</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active btn btn-rounded-pill btn-primary  m-1" aria-current="page"
+                                    href="Services.html">services</a>
+                            </li>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active btn btn-rounded-pill btn-primary m-1 " aria-current="page"
+                                    href="Skills.html">Skills</a>
+                            </li>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active btn btn-rounded-pill btn-primary m-1" aria-current="page"
+                                    href="Contacts.html">Contacts</a>
+                            </li>
+
+                        </ul>
+
+                    </div>
+                </div>
+            </nav>
+
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-5">
+            <img src="./Dolphine.jpg" class="img-fluid h-75 w-75" alt="">
+        </div>
+
+        <div class="col-6 mt-5 ">
+            <p class="text-center "><i>introduction</i></p><br>
+            <p class="one text-end"><i><strong>A web developer, based in Nairobi Kenya</strong></i></p>
+        </div>
+    </div>
+    <footer>
+
+        <div class="row  ">
+            <div class="col-1 m-1">
+                <a href="https://www.tiktok.com/@its_dolphine?lang=en"><i class="bi bi-tiktok"></i></a>
+                <a href="https://www.instagram.com/grey.dolphine.1/"><i class="bi bi-instagram"></i></a>
+                <a href="https://twitter.com/AmondiDolphine"><i class="bi bi-twitter"></i></a>
+            </div>
+            <div class="col-5">
+                <div><a href="Contacts.html"> Contacts</a></div>
+                <div><b>Any type of Query and discussion</b></div>
+                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium harum placeat quaerat dolorum
+                    sapiente officiis.</div>
+            </div>
+            <div class="col-5">
+                <div><b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est, error.</b></div>
+                <div><i>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, velit.</i></div>
+            </div>
+        </div>
+    </footer>
+
+</body>
+
+
+
 </html>
